se realizó las funciones para utilizar setInterval y poder actualizar la hora del proyecto

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <header></header>
     <main class="text-center m-3">
         <section class="container-fluid">
-            <div class="bg-dark-subtle w-25 rounded-1 py-3 my-1 opacity-75">
-                <h5>Jueves 29 de Octubre del 2015</h5>
+            <div class="bg-dark-subtle w-25 rounded-1 py-3 my-1 opacity-75" >
+                <h5 id="fecha">Jueves 29 de Octubre del 2015</h5>
             </div>
             <div class="row bg-dark-subtle w-25 rounded-1 py-3 m-0 opacity-75">
                 <div class="col-md-8 text-end px-0">
-                    <h2 class="fs-1">12 : 00 :</h2>
+                    <h2 class="fs-1" id="horaMinuto">12 : 00 :</h2>
                 </div>
                 <div class="col-md-4 d-flex align-items-center flex-wrap">
                     <div class="col-md-12 text-start">
-                        <h4 class="fs-6 my-0 py-0">PM</h4>
+                        <h4 class="fs-6 my-0 py-0" id="amPm">PM</h4>
                     </div>
                     <div class="col-md-12 text-start">
-                        <h4 class="fs-6 my-0 py-0">00</h4>
+                        <h4 class="fs-6 my-0 py-0" id="segundos">00</h4>
                     </div>
                 </div>
             </div>
